tests/baselines/reference/classImplementsImportedInterface.errors.txt
classImplementsImportedInterface.ts(7,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== classImplementsImportedInterface.ts (1 errors) ====
    module M1 {
        export interface I {
            foo();
        }
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import T = M1.I;
        class C implements T {
            foo() {}
        }
    }